# DobbleGameVision

./: .gitignore  README.md
Source/test_one/: ImageCommon.cpp  ImageCommon.h  ImageFiltering.h  main.cpp  test_one.pro
Source/test_two_source/: CMakeLists.txt  Todo
Source/test_two_source/App/: BasicPairsDetector.cpp  BasicPairsDetector.h  CMakeLists.txt  CardDetector.cpp  CardDetector.h  PairsDetector.cpp  PairsDetector.h  main.cpp
Source/test_two_source/CMakeModules/: CvPlot2.cmake  FindCvPlot2.cmake  FindQt.cmake  Qt.cmake
Source/test_two_source/Lib/: CMakeLists.txt
Source/test_two_source/Lib/Core/: Global.cpp  Global.h  ImageCommon.cpp  ImageCommon.h  ImageFiltering.cpp  ImageFiltering.h  ImageProcessing.cpp  ImageProcessing.h  LibExport.h
Source/test_two_source/PythonBinding/: CMakeLists.txt  Dgv.cpp  Dgv.h  Export.h
Source/test_two_source/Sandbox/: CMakeLists.txt
Source/test_two_source/Sandbox/BoW_Classification_Example/: CMakeLists.txt  main.cpp
Source/test_two_source/Sandbox/FreqFiltering_Example/: CMakeLists.txt  main.cpp
Source/test_two_source/Sandbox/NonlinearDiffusionFiltering_Example/: CMakeLists.txt  main.cpp
Source/test_two_source/Tests/: CMakeLists.txt  Common.cpp  Common.h
Source/test_two_source/Tests/PythonTests/: test_zero.py
Source/test_two_source/Tests/UnitTests/AppTest/: AppTest.cpp  AppTest.h  CMakeLists.txt
Source/test_two_source/Tests/UnitTests/ImageCommonTest/: CMakeLists.txt  ImageCommonTest.cpp  ImageCommonTest.h
Source/test_two_source/Tests/UnitTests/ImageProcessingTest/: CMakeLists.txt  ImageProcessingTest.cpp  ImageProcessingTest.h
